@@ -3,7 +3,7 @@ ASSEMBLY_NAME = burn-sharp
 ASSEMBLY = $(ASSEMBLY_NAME).dll
 
 burndir = $(pkglibdir)
-burn_SCRIPTS = $(ASSEMBLY)
+burn_SCRIPTS = $(ASSEMBLY) $(ASSEMBLY).config
 
 include burn-sharp.sources
 
@@ -19,7 +19,7 @@ all: $(ASSEMBLY)
 $(ASSEMBLY): $(ASSEMBLY_SOURCES)
 	$(MCS) $(MCS_FLAGS) -pkg:gtk-sharp-2.0 -unsafe -target:library -out:$@ $(ASSEMBLY_SOURCES)
 
-EXTRA_DIST = $(ASSEMBLY_SOURCES) burn-sharp.sources
+EXTRA_DIST = $(ASSEMBLY_SOURCES) burn-sharp.sources $(ASSEMBLY).config.in
 
 CLEANFILES = $(ASSEMBLY)
 DISTCLEANFILES = Makefile.in *.mdb *.dll *.exe
