@@ -1,0 +1,6 @@
+<configuration>
+	<dllmap dll="ipoddevice" target="libipoddevice.so.0.0.0" />
+	<dllmap dll="libdbus-1" target="libdbus-1.so.1" />
+	<dllmap dll="libhal" target="libhal.so.1" />
+</configuration>
+
